--- a/Project_TransferWise/ViewController/Main Screen View Controller/MainScreen.xib
+++ b/Project_TransferWise/ViewController/Main Screen View Controller/MainScreen.xib
@@ -64,7 +64,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_" translatesAutoresizingMaskIntoConstraints="NO" id="S39-45-UGI">
-                    <rect key="frame" x="0.0" y="108" width="414" height="147.33333333333337"/>
+                    <rect key="frame" x="0.0" y="108.00000000000001" width="414" height="147.33333333333337"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
