--- a/Project_TransferWise/ViewController/Main Tab View Controller/Home View Controller/HomeViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Home View Controller/HomeViewController.xib
@@ -35,7 +35,7 @@
                     <rect key="frame" x="0.0" y="158" width="414" height="578"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_picture" translatesAutoresizingMaskIntoConstraints="NO" id="C74-EG-17y">
-                            <rect key="frame" x="-15.666666666666657" y="150.33333333333331" width="445.33333333333326" height="207.66666666666669"/>
+                            <rect key="frame" x="-15.666666666666657" y="155.33333333333331" width="445.33333333333326" height="207.66666666666669"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is where you'll see your transactions." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPg-G6-NdR">
                             <rect key="frame" x="56.333333333333343" y="409.66666666666663" width="301.33333333333326" height="19.333333333333314"/>
@@ -50,15 +50,15 @@
                         <constraint firstItem="C74-EG-17y" firstAttribute="centerX" secondItem="VAn-Xt-jZd" secondAttribute="centerX" id="F7b-kD-hl2"/>
                         <constraint firstItem="QPg-G6-NdR" firstAttribute="centerX" secondItem="VAn-Xt-jZd" secondAttribute="centerX" id="HTK-be-yiB"/>
                         <constraint firstItem="C74-EG-17y" firstAttribute="height" secondItem="VAn-Xt-jZd" secondAttribute="height" multiplier="0.359338" id="LcA-EZ-Wv7"/>
-                        <constraint firstItem="C74-EG-17y" firstAttribute="centerY" secondItem="VAn-Xt-jZd" secondAttribute="centerY" constant="-34.75" id="RDN-at-1Xl"/>
-                        <constraint firstItem="QPg-G6-NdR" firstAttribute="top" secondItem="C74-EG-17y" secondAttribute="bottom" constant="51.5" id="hwm-Rr-3ao"/>
+                        <constraint firstItem="C74-EG-17y" firstAttribute="centerY" secondItem="VAn-Xt-jZd" secondAttribute="centerY" constant="-29.833333333333371" id="RDN-at-1Xl"/>
+                        <constraint firstItem="QPg-G6-NdR" firstAttribute="top" secondItem="C74-EG-17y" secondAttribute="bottom" constant="46.666666666666629" id="hwm-Rr-3ao"/>
                         <constraint firstItem="C74-EG-17y" firstAttribute="width" secondItem="VAn-Xt-jZd" secondAttribute="width" multiplier="1.07488" id="ycu-bd-1n1"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Open a balance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mES-t1-1uf">
                     <rect key="frame" x="147.66666666666666" y="79" width="118.99999999999997" height="19.666666666666671"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.1803921568627451" green="0.2627450980392157" blue="0.41176470588235292" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="to hold &amp; receive 50+ currencies." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07T-RQ-SSU">
@@ -67,8 +67,8 @@
                     <color key="textColor" red="0.38431372549999998" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" highlightedImage="+ copy" translatesAutoresizingMaskIntoConstraints="NO" id="pr3-ta-A1u">
-                    <rect key="frame" x="192.66666666666666" y="30" width="29" height="29"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" highlightedImage="+ background" translatesAutoresizingMaskIntoConstraints="NO" id="pr3-ta-A1u">
+                    <rect key="frame" x="192.66666666666666" y="33" width="29" height="29"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -83,21 +83,21 @@
                 <constraint firstItem="y8d-FY-1rP" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.16" id="Io9-qy-5Ee"/>
                 <constraint firstItem="y8d-FY-1rP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="JnK-ev-SFI"/>
                 <constraint firstItem="VAn-Xt-jZd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="NME-NX-4I2"/>
-                <constraint firstItem="pr3-ta-A1u" firstAttribute="top" secondItem="y8d-FY-1rP" secondAttribute="top" constant="10" id="cdI-t1-qnL"/>
+                <constraint firstItem="pr3-ta-A1u" firstAttribute="top" secondItem="y8d-FY-1rP" secondAttribute="top" constant="12.999999999999993" id="cdI-t1-qnL"/>
                 <constraint firstItem="Fw8-ee-L4o" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="i5U-Qe-ltF"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="VAn-Xt-jZd" secondAttribute="trailing" id="iXp-Zp-cGI"/>
                 <constraint firstItem="mES-t1-1uf" firstAttribute="centerX" secondItem="y8d-FY-1rP" secondAttribute="centerX" id="jAO-D7-dUR"/>
                 <constraint firstItem="y8d-FY-1rP" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="jYg-uQ-Xcg"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="VAn-Xt-jZd" secondAttribute="bottom" id="lnc-FJ-5V5"/>
                 <constraint firstItem="Fw8-ee-L4o" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="vZC-4z-MR3"/>
-                <constraint firstItem="mES-t1-1uf" firstAttribute="top" secondItem="pr3-ta-A1u" secondAttribute="bottom" constant="20" id="zWN-Xr-GdR"/>
+                <constraint firstItem="mES-t1-1uf" firstAttribute="top" secondItem="pr3-ta-A1u" secondAttribute="bottom" constant="17" id="zWN-Xr-GdR"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="114.94565217391305"/>
         </view>
     </objects>
     <resources>
-        <image name="+ copy" width="12" height="12"/>
+        <image name="+ background" width="12" height="12"/>
         <image name="home_picture" width="444.66665649414062" height="228"/>
         <image name="plus" width="29" height="29"/>
     </resources>
