--- a/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/InviteViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/InviteViewController.xib
@@ -1,22 +1,84 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InviteViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InviteViewController" customModule="Project_TransferWise" customModuleProvider="target">
             <connections>
+                <outlet property="inviteFriendButton" destination="Cvt-xx-Ski" id="mMm-nA-hRw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="invite_friend" translatesAutoresizingMaskIntoConstraints="NO" id="ur4-gi-LIQ">
+                    <rect key="frame" x="0.0" y="215.33333333333334" width="414" height="257.66666666666663"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You earn £50 for every 3 friends who transfer over £200" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTL-pr-8ep">
+                    <rect key="frame" x="39" y="490" width="336" height="38.333333333333371"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <color key="textColor" red="0.6588235294117647" green="0.66666666666666663" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cvt-xx-Ski">
+                    <rect key="frame" x="20" y="562" width="374" height="48"/>
+                    <color key="backgroundColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                    <state key="normal" title="Invite friends">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="inviteFriend" destination="-1" eventType="touchUpInside" id="prG-Qm-YgB"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLl-Iw-SVc">
+                    <rect key="frame" x="20" y="622" width="374" height="30"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                    <state key="normal" title="Learn more">
+                        <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite your friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aSS-ZZ-iad">
+                    <rect key="frame" x="20" y="65" width="195" height="28"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                    <color key="textColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="KTL-pr-8ep" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="39" id="4D4-ZO-crB"/>
+                <constraint firstItem="Cvt-xx-Ski" firstAttribute="top" secondItem="KTL-pr-8ep" secondAttribute="bottom" constant="33.666666666666629" id="9P7-Tf-A8c"/>
+                <constraint firstItem="KTL-pr-8ep" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="Ryl-T8-8tT"/>
+                <constraint firstItem="KTL-pr-8ep" firstAttribute="top" secondItem="ur4-gi-LIQ" secondAttribute="bottom" constant="17" id="Ssd-B7-hNQ"/>
+                <constraint firstItem="KTL-pr-8ep" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="39" id="TnK-0F-RUA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ur4-gi-LIQ" secondAttribute="bottom" constant="263" id="Vxr-rc-SQZ"/>
+                <constraint firstItem="Cvt-xx-Ski" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.065" id="XW3-2Z-zlC"/>
+                <constraint firstItem="Cvt-xx-Ski" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="YYQ-vz-9fh"/>
+                <constraint firstItem="sLl-Iw-SVc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Znl-OJ-9FL"/>
+                <constraint firstItem="aSS-ZZ-iad" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="65" id="eG6-yq-4Hu"/>
+                <constraint firstItem="ur4-gi-LIQ" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.35" id="f3d-JW-fqX"/>
+                <constraint firstItem="aSS-ZZ-iad" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="ij2-rf-xbB"/>
+                <constraint firstItem="ur4-gi-LIQ" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="lFo-9Z-Xtj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sLl-Iw-SVc" secondAttribute="trailing" constant="20" id="o1x-Vt-Oot"/>
+                <constraint firstItem="ur4-gi-LIQ" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="qGP-Jl-iZD"/>
+                <constraint firstItem="sLl-Iw-SVc" firstAttribute="top" secondItem="Cvt-xx-Ski" secondAttribute="bottom" constant="12" id="t0u-kz-JQ9"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="aSS-ZZ-iad" secondAttribute="trailing" constant="199" id="z0d-HO-mfL"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Cvt-xx-Ski" secondAttribute="trailing" constant="20" id="zdf-Iq-8i0"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="137.68115942028987" y="150.81521739130437"/>
         </view>
     </objects>
+    <resources>
+        <image name="invite_friend" width="162.33332824707031" height="150"/>
+    </resources>
 </document>
