--- a/Project_TransferWise/ViewController/Main Tab View Controller/Recipient View Controller/RecipientViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Recipient View Controller/RecipientViewController.xib
@@ -28,48 +28,38 @@
                         <action selector="add" destination="-1" eventType="touchUpInside" id="hPi-py-kEU"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipients" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1V0-cE-Y6Y">
-                    <rect key="frame" x="30" y="85" width="92" height="24"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipients " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1V0-cE-Y6Y">
+                    <rect key="frame" x="20" y="56" width="129.33333333333334" height="30"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                     <color key="textColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="recipient" translatesAutoresizingMaskIntoConstraints="NO" id="4i8-bB-L22">
                     <rect key="frame" x="-15.666666666666657" y="278.66666666666669" width="445.33333333333326" height="179"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3f-7V-PaV">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Once you've added some recipients, you'll              see them saved here. Tap 'add' to get                started." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="v3f-7V-PaV">
                     <rect key="frame" x="25" y="541.66666666666663" width="364" height="110.33333333333337"/>
-                    <attributedString key="attributedText">
-                        <fragment content="Once you've added some recipients, you'll              see them saved here. Tap 'add' to get                started.">
-                            <attributes>
-                                <color key="NSBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="NSColor" red="0.6588235294117647" green="0.66666666666666663" blue="0.67450980392156867" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <font key="NSFont" metaFont="system" size="16"/>
-                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="5" tighteningFactorForTruncation="0.0"/>
-                            </attributes>
-                        </fragment>
-                    </attributedString>
+                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
+                    <color key="textColor" red="0.6588235294117647" green="0.66666666666666663" blue="0.67450980392156867" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="enc-zd-8pL" secondAttribute="trailing" constant="41" id="2Yi-5w-IlT"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="enc-zd-8pL" secondAttribute="trailing" constant="41" id="2Yi-5w-IlT"/>
+                <constraint firstItem="enc-zd-8pL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="343" id="AON-jt-2dD"/>
                 <constraint firstItem="4i8-bB-L22" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Efx-YT-6cd"/>
-                <constraint firstItem="1V0-cE-Y6Y" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.222222" id="GAu-OW-Zq9"/>
-                <constraint firstAttribute="trailing" secondItem="v3f-7V-PaV" secondAttribute="trailing" constant="25" id="JI7-R7-EzI"/>
-                <constraint firstItem="1V0-cE-Y6Y" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="Klw-NF-du4"/>
+                <constraint firstItem="1V0-cE-Y6Y" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Klw-NF-du4"/>
+                <constraint firstItem="v3f-7V-PaV" firstAttribute="top" secondItem="4i8-bB-L22" secondAttribute="bottom" constant="83.999999999999943" id="O1E-Ln-PGL"/>
                 <constraint firstItem="4i8-bB-L22" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.243207" id="Rbe-1G-euM"/>
-                <constraint firstItem="1V0-cE-Y6Y" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="85" id="U6A-9L-Stw"/>
+                <constraint firstItem="1V0-cE-Y6Y" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="56" id="U6A-9L-Stw"/>
                 <constraint firstItem="v3f-7V-PaV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Z0N-zM-yMo"/>
                 <constraint firstItem="4i8-bB-L22" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="aqX-wg-4Nz"/>
-                <constraint firstItem="v3f-7V-PaV" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.15" id="dfK-RV-Aol"/>
                 <constraint firstItem="4i8-bB-L22" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="1.07488" id="hEy-GJ-kHC"/>
                 <constraint firstItem="enc-zd-8pL" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="hSe-BA-vyb"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="v3f-7V-PaV" secondAttribute="bottom" constant="84" id="jpB-JC-mNG"/>
-                <constraint firstItem="v3f-7V-PaV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="25" id="sw6-dG-uwe"/>
                 <constraint firstItem="v3f-7V-PaV" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.879227" id="tPd-nM-Ug1"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1V0-cE-Y6Y" secondAttribute="trailing" priority="750" constant="292" id="wae-Nb-aUF"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="1V0-cE-Y6Y" secondAttribute="trailing" constant="292" id="wae-Nb-aUF"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="140.57971014492756" y="134.5108695652174"/>
